test/runtime/fail/if/else_condition.hy

// expect error: Expected `{`, found `a`

let a = 3
if a == 3 {
	// ...
} else a == 4 {
	// ...
}
